--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>testng</artifactId>
             <version>6.9.10</version>
         </dependency>
+        <dependency>
+            <groupId>net.lightbody.bmp</groupId>
+            <artifactId>browsermob-core-littleproxy</artifactId>
+            <version>2.1.0-beta-3</version>
+        </dependency>
     </dependencies>
 
     <build>
